added green checkmark for HW2

--- a/hw1.html
+++ b/hw1.html
@@ -33,7 +33,7 @@
               <td><a href="../cnit133/hw2/hw2.html" class="ui inverted button">Homework 2</a></td>
               <td>Basic Operations</td>
               <td>February 5, 2018</td>
-              <td><i class="large red remove icon"></i></td>
+              <td><i class="large green check icon"></i></td>
             </tr>
             <tr>
               <td><a href="../cnit133/hw3/hw3.html" class="ui inverted button">Homework 3</a></td>
@@ -75,5 +75,5 @@
         </table>
     </div>
 </body>
-    
+
 </html>
